--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ tests/LocalTest.php
 /.phpunit.result.cache
 .php-cs-fixer.cache
 /.phpunit.cache
+/.vscode
+.DS_Store
+._.DS_Store
+/.git
+/.php-cs-fixer.cache
